valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__access_restriction__tests__parse_access_restrictions-2.snap
---
source: valhalla-graphtile/src/graph_tile/access_restriction.rs
expression: tile.access_restrictions.last().unwrap()
---
AccessRestriction {
    bitfield: AccessRestrictionBitField {
        edge_index: 2581,
        restriction_type: MaxHeight,
        modes: 233,
    },
    value: 430,
}
