valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__access_restriction__tests__parse_access_restrictions.snap
---
source: valhalla-graphtile/src/graph_tile/access_restriction.rs
expression: "tile.access_restrictions[0]"
---
AccessRestriction {
    bitfield: AccessRestrictionBitField {
        edge_index: 1147,
        restriction_type: 4,
        modes: 8,
    },
    value: 350,
}
